@@ -11,6 +11,8 @@ changes relative to sbcl-1.3.10:
     (patch by Ilya Perminov, lp#1339924)
   * bug fix: MAKE-ALIEN-STRING returns the number of allocated bytes as a
     second value as advertised (reported by Johann 'Myrkraverk' Oskarsson)
+  * bug fix: when TO-READTABLE is supplied to COPY-READTABLE, it will
+    contain only the macros in FROM-READTABLE and no others. (lp#1631506)
 
 changes in sbcl-1.3.10 relative to sbcl-1.3.9:
   * enhancement: more compact low-level error signaling code
